finish band controllers and views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,15 @@
   </head>
 
   <body>
+
+    <% if logged_in? %>
+      <%= button_to 'Logout', session_url, method: :delete %>
+    <% else %>
+      <%= link_to 'Register', new_user_url %>
+      <%= link_to 'Login', new_session_url %>
+    <% end %>
+
     <%= yield %>
+
   </body>
 </html>
