--- a/app/views/bands/show.html.erb
+++ b/app/views/bands/show.html.erb
@@ -12,3 +12,5 @@
 <%= button_to "Delete Band", band_url(@band), method: :delete %>
 <br>
 <%= link_to "All Bands", bands_url %>
+<br>
+<%= link_to "Add Album", new_band_album_url(@band) %>
